--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>BSCPad</title>
-    <meta name="author" content="BSCPad">
-    <meta name="description" content="BSCPad">
+    <title>HecoPad</title>
+    <meta name="author" content="HecoPad">
+    <meta name="description" content="HecoPad">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
-    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.jpg">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/HP Logo.png">
     <!-- CSS here -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -44,7 +44,7 @@
                 <div class="container nav-center">
                     <!-- nav header -->
                     <div class="nav-header">
-                        <img src="assets/img/logo.png" class="logo me-2" alt="logo" />
+                        <img src="assets/img/HP Logo.png" class="logo me-2" alt="logo" />
                         <button class="nav-toggle">
                             <i class="fas fa-bars"></i>
                         </button>
@@ -66,7 +66,7 @@
                             <a href="contact.html">Stake</a>
                         </li>
                         <li>
-                            <a href="contact.html">Conncet Wallet</a>
+                            <a href="contact.html">Connect Wallet</a>
                         </li>
                     </ul>
 
@@ -81,7 +81,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <div class="hero-text text-center">
-                                    <h3 class=" text-center">LaunchPad</h3>
+                                    <h3 class=" text-center">HecoPad</h3>
                                     <h1 class="text-uppercase">
                                         A Decentralized Launchpad platform <br>designed to be more inclusive! </h1>
                                     <a data-aos="fade-up" data-aos-delay="300" class="btn btn-h me-3 " href="https://t.me/HecoPadOfficial">join Telegram</a>
@@ -111,8 +111,8 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="about-content-text">
-                                        <h3 class="mb-30">What is EvolvePad?</h3>
-                                        <p>The HecoPad Launch Pad is the first decentralized LaunchPad platform for the Huobi Eco Chain Network. </p>
+                                        <h3 class="mb-30">What is HecoPad?</h3>
+                                        <p>HecoPad is the first decentralized LaunchPad platform for the Huobi Eco Chain Network. </p>
                                         <p>
                                             Decentralized projects wil be able to raise capital in a fast and efficient manner. Users will be able to participate in a secure and compliant environment and to use assets that go away beyond the current HRC-20 standard with cross chain Interoperability.
                                         </p>
@@ -151,17 +151,17 @@
                                         <div class="row">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <p class="bold price-header"><b class="text-warning">LP POOL</b></p>
+                                                    <p class="bold price-header"><b class="text-warning">Bronze Pool</b></p>
                                                 </div>
                                                 <hr>
                                                 <div class="col-12">
-                                                    <p class="light thin mb-0">LP Requirement</p>
+                                                    <p class="light thin mb-0">Bronze Requirement</p>
                                                 </div>
                                                 <div class="col-12">
                                                     <p class="bold price mt-2"><span>500</span></p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <p class="light thin mb-0">LP PERIOD</p>
+                                                    <p class="light thin mb-0">Lock PERIOD</p>
                                                 </div>
                                                 <div class="col-12">
                                                     <p class="value price"><span>9 days</span></p>
@@ -195,20 +195,20 @@
                                         <div class="row">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <p class="bold price-header"><b class="text-warning">Stake pool</b></p>
+                                                    <p class="bold price-header"><b class="text-warning">Silver Pool</b></p>
                                                 </div>
                                                 <hr>
                                                 <div class="col-12">
-                                                    <p class="light thin mb-0">Staking Requirement</p>
+                                                    <p class="light thin mb-0">Silver Requirement</p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <p class="bold price mt-2"><span>250</span></p>
+                                                    <p class="bold price mt-2"><span>1000</span></p>
                                                 </div>
                                                 <div class="col-12">
                                                     <p class="light thin mb-0">Staking period</p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <p class="value price"><span>2 days</span></p>
+                                                    <p class="value price"><span>7 days</span></p>
                                                 </div>
                                                 <div class="col-12">
                                                     <p class="light thin mb-0">Whitelist Requirement Twitter</p>
@@ -239,14 +239,14 @@
                                         <div class="row">
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <p class="bold price-header"><b class="text-warning">Whitelist Requirement</b></p>
+                                                    <p class="bold price-header"><b class="text-warning">Gold Pool</b></p>
                                                 </div>
                                                 <hr>
                                                 <div class="col-12">
                                                     <p class="light thin mb-0">Staking Requirement</p>
                                                 </div>
                                                 <div class="col-12">
-                                                    <p class="bold price mt-2"><span>no</span></p>
+                                                    <p class="bold price mt-2500
                                                 </div>
                                                 <div class="col-12">
                                                     <p class="light thin mb-0">LP Requirement</p>
