--- a/Hecopad-main/index.html
+++ b/Hecopad-main/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>BSCPad</title>
-    <meta name="author" content="BSCPad">
-    <meta name="description" content="BSCPad">
+    <title>HecoPad</title>
+    <meta name="author" content="HecoPad">
+    <meta name="description" content="HecoPad">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.jpg">
@@ -44,7 +44,7 @@
                 <div class="container nav-center">
                     <!-- nav header -->
                     <div class="nav-header">
-                        <img src="assets/img/logo.png" class="logo me-2" alt="logo" />
+                        <img src="assets/img/HP%20logo.png" class="logo me-2" alt="logo" />
                         <button class="nav-toggle">
                             <i class="fas fa-bars"></i>
                         </button>
@@ -60,13 +60,13 @@
                             <a href="about.html">Pool</a>
                         </li>
                         <li>
-                            <a href="projects.html">Lp</a>
+                            <a href="projects.html">IDO Application</a>
                         </li>
                         <li>
                             <a href="contact.html">Stake</a>
                         </li>
                         <li>
-                            <a href="contact.html">Conncet Wallet</a>
+                            <a href="contact.html">Connect Wallet</a>
                         </li>
                     </ul>
 
@@ -111,8 +111,8 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="about-content-text">
-                                        <h3 class="mb-30">What is EvolvePad?</h3>
-                                        <p>The HecoPad Launch Pad is the first decentralized LaunchPad platform for the Huobi Eco Chain Network. </p>
+                                        <h3 class="mb-30">What is HecoPad?</h3>
+                                        <p>HecoPad LaunchPad is the first decentralized LaunchPad platform for the Huobi Eco Chain Network. </p>
                                         <p>
                                             Decentralized projects wil be able to raise capital in a fast and efficient manner. Users will be able to participate in a secure and compliant environment and to use assets that go away beyond the current HRC-20 standard with cross chain Interoperability.
                                         </p>
@@ -136,7 +136,7 @@
                         <div class="row justify-content-center text-center">
                             <div class="col-lg-8">
                                 <div class="section-title">
-                                    <h2 class="title title-xl" data-aos="fade-up" data-aos-delay="100" title="Tiered System">
+                                    <h2 class="title title-xl" data-aos="fade-up" data-aos-delay="100" title="Tier System">
                                      Pool   </h2>
                                     <p data-aos="fade-up" data-aos-delay="200" class="mt-3">HecoPad will showcase a fixed tier system based on the number of tokens held.</p>
                                 </div>
